tests/baselines/reference/mismatchedGenericArguments1.errors.txt
tests/cases/compiler/mismatchedGenericArguments1.ts(5,4): error TS2421: Class member of type '(x: string) => number' is not assignable to implementing interface member of type '<T>(x: T) => T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'T' is not assignable to type 'string'.
tests/cases/compiler/mismatchedGenericArguments1.ts(11,4): error TS2421: Class member of type '<U>(x: string) => number' is not assignable to implementing interface member of type '<T>(x: T) => T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'T' is not assignable to type 'string'.


==== tests/cases/compiler/mismatchedGenericArguments1.ts (2 errors) ====
    interface IFoo<T> {
       foo<T>(x: T): T;
    }
    class C<T> implements IFoo<T> {
       foo(x: string): number {
       ~~~
!!! error TS2421: Class member of type '(x: string) => number' is not assignable to implementing interface member of type '<T>(x: T) => T'.
!!! error TS2421:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2421:     Type 'T' is not assignable to type 'string'.
         return null;
       }
    }
    
    class C2<T> implements IFoo<T> {
       foo<U>(x: string): number {
       ~~~
!!! error TS2421: Class member of type '<U>(x: string) => number' is not assignable to implementing interface member of type '<T>(x: T) => T'.
!!! error TS2421:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2421:     Type 'T' is not assignable to type 'string'.
         return null;
       }
    }
    